fixed margin and visibility problems

--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 5vh 6vh;
+  margin-top: 70px;
   min-height: 100vh;
 
   h1 {
