--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -26,13 +26,13 @@
   }
 }
 
-.search-home, .restaurant {
-  display: none;
-}
+// .search-home, .restaurant {
+//   display: none;
+// }
 
 .search-home {
   margin: 0 auto;
-  margin-top: 10vh;
+  // margin-top: 10vh;
 
   .fas {
     color: white;
